tests/samples/negative/traits/trait_predicate_unsatisfied_generic_arg.ax
module trait_predicate_unsatisfied_generic_arg;

trait Reader {
    fn read(self: &Self) -> i32;
}

struct File {
    value: i32;
}

struct Other {
    value: i32;
}

impl Reader for File {
    fn read(self: &File) -> i32 {
        return self.value;
    }
}

fn use_reader<T>(value: T) -> i32 where T: Reader {
    return 0;
}

fn main() -> i32 {
    let other = Other { value: 9 };
    return use_reader<Other>(other);
}
